2007-09-11  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in:	backport of TK_INCLUDE_SPEC addition.
	* unix/tkConfig.sh.in:	[Bug 777203]
	* unix/configure: autoconf-2.13

2007-09-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Fix for AMD64 symbols target builds.
	* win/rules.vc:

2007-09-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rc/tk_base.rc: Backported the BASE_NO_TK_ICON patch to assist in
	creating tclkits and/or basekits with corrent resources.

2007-09-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/wm.test: -transparentcolor added to windows wm attributes tests

2007-08-27  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDialog.c (Tk_ChooseColorObjCmd): correct setting of
	interp result [Bug 1782105]; fix -initialcolor overwriting last color
	selection; style cleanup.

2007-08-07  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in:	add support for compile flags specific to
				object files linked directly into executables.

	* unix/configure.in (Darwin): only use -seg1addr flag when prebinding;
	use -mdynamic-no-pic flag for object files linked directly into exes.

	* unix/configure: autoconf-2.13

2007-07-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDialog.c (NavServicesGetFile): reset interp result on
	nav dialog cancel. [Bug 1743786]

2007-07-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWindowEvent.c (Tk_MacOSXIsAppInFront):	use process mgr
	* macosx/tkMacOSXMouseEvent.c:				to determine if
	app is in front instead of relying on activate/deactivate events (which
	may arrive after this info is needed, e.g. during window drag/click
	activation); replace other process mgr use to get this info with calls
	to Tk_MacOSXIsAppInFront().

	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent): correct
	window click activation, titlebar click handling and background window